# db-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  litestream.yml
docs/: GOAL.md
src/: config.rs  error.rs  main.rs
src/api/: db.rs  health.rs  mod.rs  openapi.json  openapi.rs  response.rs  routes.rs  swagger.html
src/db/: instance.rs  manager.rs  mod.rs  query.rs
src/db/dialects/: mod.rs  mysql.rs  sqlserver.rs
src/docker/: container.rs  mod.rs
src/storage/: backup.rs  metadata.rs  mod.rs
tests/: smoke-mssql.py  smoke-mysql.py
