[package]
name = "db-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# Storage (Phase 1-2)
rusqlite = { version = "0.32", features = ["bundled"] }
aws-config = "1.5"
aws-sdk-s3 = "1.65"
flate2 = "1.0"
